--- a/choropleth-map/index.html
+++ b/choropleth-map/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" type="text/css"href="stylesheet.css">
     </head>
     <body>
         <h1 id="title">United States Educational Attainment</h1>
