--- a/choropleth-map/index.html
+++ b/choropleth-map/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css"href="stylesheet.css">
+        <script src = "https://d3js.org/d3.v4.min.js"></script>
+        <script type="text/javascript" src="index.js"></script>
     </head>
     <body>
         <h1 id="title">United States Educational Attainment</h1>
