--- a/choropleth-map/index.html
+++ b/choropleth-map/index.html
@@ -3,6 +3,10 @@
     <head>
         <link rel="stylesheet" type="text/css"href="stylesheet.css">
         <script src = "https://d3js.org/d3.v4.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.min.js"></script>
+        <script src="https://d3js.org/d3-color.v1.min.js"></script>
+        <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+        <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
         <script type="text/javascript" src="index.js"></script>
     </head>
     <body>
